<resources>
    <string name="appName">Eat NOW</string>
    <string name="welcome">Welcome</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="emailRecommendationDescription">Recommendation email</string>
    <string name="receivePromotion">Enter the mail of an existing user and give him a 10% off in his next order</string>

    <!-- Login activity -->
    <string name="incorrectPassword">Incorrect password</string>

    <!-- Home activity -->
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!-- Register activity -->
    <string name="confirmPassword">Confirm Password</string>
    <string name="edit">Edit</string>
    <string name="userUpdated">Updated Successfully</string>

    <!-- RestaurantSearch fragment -->
    <string name="addressMessage">Enter an address</string>
    <string name="promotionMessage">Recommend a friend!\nGive your email to your friend and receive a 10% off in you next order</string>
    <string name="search">Search</string>

    <!-- Profile -->
    <string name="anImage">an Image</string>
    <string name="editProfile">Edit Profile</string>

    <!-- Restaurants activity -->
    <string name="restaurantsNearby">Restaurants Nearby</string>
    <string name="restImgDesc">Restaurant Logo</string>

    <!-- Products activity -->
    <string name="viewOrder">View Order</string>
    <string name="zero">0</string>

    <!-- Product detail activity -->
    <string name="quantity">Quantity</string>
    <string name="specialInstructions">Special Instructions (Optional)</string>
    <string name="addToOrder">Add To Order</string>
    <string name="imgProduct">Product Image</string>
    <string name="less">-</string>
    <string name="more">+</string>

    <!-- Order View activity -->
    <string name="yourOrder">Your Order</string>
    <string name="yourPreviousOrder">Your Previous Order</string>
    <string name="checkout">Checkout</string>
    <string name="cancel">Cancel</string>
    <string name="productDescriptionFormat">• %1$s</string>
    <string name="specialInstructionsFormat">\"%1$s\"</string>
    <string name="clearImage">Clear Image</string>
    <string name="discount">Discount</string>
    <string name="subtotal">Subtotal</string>
    <string name="discountDialog">Discount: %1$s\n</string>
    <string name="priceDialog">Subtotal:  %1$s</string>
    <string name="totalPriceDialog">Total:     %1$s</string>
    <string name="deliveryFee">Delivery Fee: %1$s\n</string>
    <array name="deliveryPickup">
        <item>Pick up</item>
        <item>Delivery</item>
    </array>
    <string name="orderComplete">Order Complete</string>

    <!-- Validation -->
    <string name="someErrors">There are some errors</string>
    <string name="required">This field is required</string>
    <string name="invalid">This field is invalid</string>
    <string name="emailExist">This email was previously signed up</string>
    <string name="emailNotExist">This email is not signed up</string>
    <string name="minLength">This field must be at least %1$s chars</string>
    <string name="maxLength">This field can\'t be longer than %1$s chars</string>
    <string name="specificLength">This field must be %1$s chars</string>
    <string name="confirmPasswordNotMatch">Confirm password doesn\'t match password</string>
    <string name="onlyNumbers">This field only accept numbers</string>
    <string name="checkInternet">Check your internet connection</string>

    <!--Checkout-->
    <string name="deliveryTime">Estimated time  30 ~ 50 mins</string>
    <string name="additionalInfo">Address additional information</string>
    <string name="courier">Delivery Fee</string>
    <string name="placeOrder">Place Order</string>
    <string name="viewProducts">View Products</string>
    <string name="cashOnly">Cash payment only</string>
    <string name="gst">GST</string>
    <string name="total">Total</string>

    <!-- History -->
    <string name="delivery">Delivery</string>
    <string name="pickUp">Pick up</string>
</resources>
