<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/checkout"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtCheckoutAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/icon_car"
        android:drawableLeft="@drawable/icon_car"
        android:text="Address"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckout" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiAdditionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/app_margin"
        android:layout_marginRight="64dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckoutAddress"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/etAdditionalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_notes"
            android:drawableLeft="@drawable/icon_notes"
            android:ems="10"
            android:hint="@string/additionalInfo"
            android:inputType="text"
            android:theme="@style/AppTheme.EditText"
            tools:ignore="Autofill"

            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/txtCheckoutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/icon_history_black"
        android:drawableLeft="@drawable/icon_history_black"
        android:text="@string/deliveryTime"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintTop_toBottomOf="@+id/tiAdditionalInfo"/>



        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/app_margin"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="32dp"
            android:text="@string/placeOrder"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCashOnly"
             />

    <TextView
        android:id="@+id/txtCourier"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/courier"
        android:textSize="20sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckoutTime" />

    <TextView
        android:id="@+id/txtCourierPrice"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|end"
        android:textSize="20sp"
        android:text="$6.00"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckoutTime" />

        <TextView
            android:id="@+id/txtSubtotal"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/subtotal"
            android:textSize="20sp"
            android:theme="@style/AppTheme.EditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCourier" />

        <TextView
            android:id="@+id/txtSubtotalPrice"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right|end"
            android:textSize="20sp"
            android:text="$30.00"
            android:theme="@style/AppTheme.EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintTop_toBottomOf="@+id/txtCourier" />
    <TextView
        android:id="@+id/txtGST"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gst"
        android:textSize="20sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtotalPrice" />

    <TextView
        android:id="@+id/txtGSTPrice"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|end"
        android:text="$30.00"
        android:textSize="20sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtotalPrice" />

    <TextView
        android:id="@+id/txtDiscount"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/discount"
        android:theme="@style/AppTheme.EditText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGST" />

        <TextView
            android:id="@+id/txtDiscountPrice"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="8dp"
            android:gravity="right|end"
            android:text="$30.00"
            android:textSize="20sp"
            android:theme="@style/AppTheme.EditText"
            app:layout_constraintBottom_toBottomOf="@+id/txtDiscount"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/total"
        android:textSize="20sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscountPrice" />

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|end"
        android:text="$30.00"
        android:textSize="20sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscountPrice" />

    <TextView
        android:id="@+id/txtCashOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cashOnly"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalPrice" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>